# DOMvault

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
examples/: 01-basic-capture.md  02-resume-login.md  03-find-data-source.md
src/domvault/: __init__.py  __main__.py  browser.py  capture.py  collectors.py  saver.py  server.py
src/domvault/static/: index.html
tests/: test_saver.py
