[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domvault"
version = "0.2.0"
description = "A lightweight local Playwright-based tool for capturing the current rendered HTML of a web page after manual interaction, for scraping learning and WebRPA debugging."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "wangxz01" }]
keywords = ["playwright", "dom", "snapshot", "scraper", "webrpa", "html"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
domvault = "domvault.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/domvault"]

[tool.pytest.ini_options]
testpaths = ["tests"]
